# chrome-whisperx

./: DEVELOPMENT.md  LICENSE  README.md
chrome-extension/: background.js  manifest.json  offscreen.html  offscreen.js  popup.css  popup.html  popup.js  popup_detached.html  popup_detached.js
server/: integration_test.py  pyproject.toml  server.py
